--- a/admin/styles/globals.css
+++ b/admin/styles/globals.css
@@ -26,3 +26,34 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
 }
+
+.body-page-transition {
+  overflow: hidden; }
+  .body-page-transition #page-transition {
+    position: fixed;
+    z-index: 9999;
+    width: 100%;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    align-items: center; }
+  .body-page-transition #page-transition > div:after {
+    content: "";
+    background-image: url("/admin/images/bg7.jpg");
+    background-size: cover;
+    position: fixed;
+    z-index: 9998;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0; }
+  .body-page-transition #page-transition > div:before {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    content: '';
+    display: block;
+    z-index: 9999;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.5); }
