--- a/admin/styles/globals.css
+++ b/admin/styles/globals.css
@@ -1,3 +1,39 @@
+html,
+body {
+  padding: 0;
+  margin: 0;
+  font-family: "Arial", sans-serif;
+  overflow-x: clip;
+}
+
+textarea:focus, input:focus{
+  outline: none;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.link {
+  color: inherit;
+  text-decoration: none;
+}
 
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
